--- a/About_us/about-us.html
+++ b/About_us/about-us.html
@@ -232,7 +232,7 @@
 	</div>	
  </div>
 
-
+  <div class="about2">
  <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
   <div class="remaining container">
 	  <p>Ministry of HRD has established ‘MRHD’s Innovation Cell’
@@ -258,6 +258,7 @@
 		</ol>
   </div>
   </div>
+</div>
 
  
 
