--- a/Impact/impact19_20.html
+++ b/Impact/impact19_20.html
@@ -9,20 +9,22 @@
 		<link rel='stylesheet' id='skilled-style-css'  href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' type='text/css' media='all' />
 		<link rel='stylesheet' id='skilled-style-css'  href='assets/css/responsive.css' type='text/css' media='all' />
 		<link rel='stylesheet' id='skilled-style-css'  href='assets/css/customAll.css' type='text/css' media='all' />	
-		<link rel='stylesheet' id='skilled-style-css'  href='assets/css/advisory_style.css' type='text/css' media='all' />
+		<link rel='stylesheet' id='skilled-style-css'  href='assets/css/style19_20.css' type='text/css' media='all' />
 		
 		<!-- bootstrap css -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     
-        <!--  MAIN CSS-->
-        <link rel="stylesheet" id="style-main" href="assets/css/styles-main30f4.css" />
-        <link rel="stylesheet" id="swiper-main" href="assets/vendors/swiper/swiper.min.css" />
-        <link rel="stylesheet" id="lity-main" href="assets/vendors/lity/lity.min.css" />
-        <link rel="stylesheet" id="mediaelementplayer" href="assets/vendors/mediaelement/mediaelementplayer.min.css" />
-        <link rel="stylesheet" id="range" href="assets/vendors/range/jquery.range.css" />
-        <link rel="stylesheet" id="lightgallery" href="assets/vendors/lightgallery/lightgallery.min.css" />
-        <link rel="stylesheet" type="text/css" href="assets/css/reponsive.css" />
-        <link rel="stylesheet" id="style-link" href="assets/css/styles-15ade1.css" />
+     <!-- Bootstrap CSS -->
+	 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	 <!-- Site CSS -->
+	 <link rel="stylesheet" href="assets/css/style.css">
+	 <!-- ALL VERSION CSS -->
+	 <link rel="stylesheet" href="assets/css/css/versions.css">
+	 <!-- Responsive CSS -->
+	 <link rel="stylesheet" href="assets/css/css/responsive.css">
+	 <!-- Custom CSS -->
+	 <link rel="stylesheet" href="assets/css/css/custom.css">
+
 
 
 <link rel='stylesheet' id='redux-google-fonts-skilled_options-css' href="https://fonts.googleapis.com/css?family=Rubik%3A300%2C400%2C500%2C700%2C900%2C300italic%2C400italic%2C500italic%2C700italic%2C900italic%7CRaleway%3A600%2C700&amp;subset=latin&amp;ver=1560517728" type='text/css' media='all' />	
@@ -175,13 +177,13 @@
 <div class="cbp-row wh-page-title-bar">
 	<div class="cbp-container">
 		<div class="one whole wh-padding wh-page-title-wrapper">
-			<h1 class="page-title">About Us</h1>							
+			<h1 class="page-title">Impact Lecture Series</h1>							
 			<div class="wh-breadcrumbs align-center">
 				<nav role="navigation" aria-label="Breadcrumbs" class="breadcrumb-trail breadcrumbs" itemprop="breadcrumb">
 					<ul class="trail-items" itemscope="" itemtype="http://schema.org/BreadcrumbList">
 						<meta name="numberOfItems" content="2"><meta name="itemListOrder" content="Ascending">
 							<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem" class="trail-item trail-begin"><a href="index.html" rel="home" itemprop="item"><span itemprop="name">Home</span></a><meta itemprop="position" content="1"></li>
-							<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem" class="trail-item trail-end"><span itemprop="item"><span itemprop="name">Advisory Committee</span></span><meta itemprop="position" content="2"></li>
+							<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem" class="trail-item trail-end"><span itemprop="item"><span itemprop="name">IIC 2019-20</span></span><meta itemprop="position" content="2"></li>
 					</ul>
 				</nav>	
 			</div>
@@ -190,30 +192,52 @@
 </div>
 
 
-<!-- header end -->
-
 <!-- content start -->
 
+<div class="content" id="content">
+<section class="about_section layout_padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+				Impact Lecture Series for aspirational IICs (2019-20)
+				<br>
+              </h2>
+            </div>
+            <p>
+				<br>
+				The objective of the scheme is to promote innovation, IPR and 
+				startup awareness among students and faculties in the IIC institute 
+				located in Rural/Himalayan/North Eastern region/Tier III Cities with 
+				less outreach to the innovation ecosystem enablers. This impact series
+				will enable IICs to organise two lectures (on Different dates) in the
+				field of innovation, IPR, and startup by inviting successful innovators,
+				patent expert and entrepreneurs. MHRD’s Innovation will provide financial 
+				support to selected Institutions (IICs) to conduct these 
+				lectures. Institute will be asked submit a detailed proposal to MIC.
+				<br>
+            </p>
+            <a href="assets/images/Recommendation_of_Impact_Lecture_Series_3.pdf">
+			  PDF of Selected Institutions
+			  <br>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="assets/images/00b.jpg" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
 
+<!-- content end -->
 
-<div class="titlepage">
-    <h2> Advisory Committee</h2>
-    <span>National Advisory Committee for Institution's Innovation Council </span>
- </div>
-<div id="content" class="content container">
- 
- <table  _ngcontent-mxr-c4="" align="center"  style="margin-left:auto;margin-right:auto; " class="table-hover"><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Prof. Anil D. Sahasrabudhe</b><br _ngcontent-jsg-c4=""> AICTE</td><td _ngcontent-jsg-c4="">Chairman</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Dr. M.P Poonia</b><br _ngcontent-jsg-c4="">
-    Vice Chairman ,AICTE
-    </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Prof, Rajnish Jain</b><br _ngcontent-jsg-c4="">Secretary, UGC </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Mr Anand ADC </b><br _ngcontent-jsg-c4=""> Ministry of MSME </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Shri Deepanyar Mallick </b><br _ngcontent-jsg-c4=""> DDG, Ministry of MSDE </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Shri R Ramanan </b><br _ngcontent-jsg-c4=""> Mission Director, AIM, NITI Aayog </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Dr. Anita Gupta</b><br _ngcontent-jsg-c4="">Adviser &amp; Associate Head, NSTEDB, DST, MoST </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Dr. Manish Diwan</b><br _ngcontent-jsg-c4="">Head – Strategic Partnership &amp; Entrepreneurship, BIRAC </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Dr. H Purushotham</b><br _ngcontent-jsg-c4="">Chairman cum Managing Director, NRDC </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Shri Anil Agrawal</b><br _ngcontent-jsg-c4="">Joint Secretary, Startup India, DPIIT, MoC, GoI </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Dr. Yashwant Dev Panwar</b><br _ngcontent-jsg-c4="">TIFAC </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Dr. Abhay Jere</b><br _ngcontent-jsg-c4="">CIO, MHRD’s Innovation Cell
-    </td><td _ngcontent-jsg-c4="">Member</td></tr><tr _ngcontent-jsg-c4=""><td _ngcontent-jsg-c4=""><b _ngcontent-jsg-c4="">Mr. Dipan Sahu</b><br _ngcontent-jsg-c4="">National Coordinator of IIC, MHRD’s Innovation Cell
-    </td><td _ngcontent-jsg-c4="">Convener</td></tr></table>
-
-  </div>
- 
-
- <!--content end  -->
-
-<!-- footer start -->
+<!-- header start -->
 		
 <div class="cbp-row wh-footer">
 <div class="cbp-container wh-padding">
@@ -349,10 +373,11 @@
 		
 		<script type='text/javascript' src='assets/js/customJS.js'></script>
 
-		<!-- bootstrap popper js jquery -->
+		<!-- bootstrap query js popper.js -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
