--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 									<li id="menu-item-13486" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-13486 msm-top-level-item">
 										<a href="#">Impact Lecture Series</a>
 										<ul class="sub-menu">
-											<li id="menu-item-13624" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-13624"><a href="#">IIC 2019-20</a></li>
-											<li id="menu-item-13637" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-13637"><a href="#">IIC 2020-21</a></li>											
+											<li id="menu-item-13624" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-13624"><a href="Impact/impact19_20.html">IIC 2019-20</a></li>
+											<li id="menu-item-13637" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-13637"><a href="Impact/impact20_21.html">IIC 2020-21</a></li>											
 										</ul>
 									</li>
 									<li id="menu-item-13647" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-13647 msm-top-level-item"><a href="#">Innovation Ambassador</a></li>
